--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
         <h3>Undergraduate Researcher (Sept. 2023 – Dec. 2024)</h3>
         <p>
-            <strong>YOLO-based Doppler Radar and Display Control System using Hand Gesture Recognition</strong><br>
-            March 2024 – Present<br>
+            <strong>YOLO-based Doppler Radar and Display Control System using Hand Gesture Recognition(March 2024 – Present)</strong><br>
             - Analysis of learning models using AI image processing with spectrograms and design of learning models based on YOLOv3, v5, v7, and CNN.<br>
         </p>
 
